@@ -1,3 +1,8 @@
+2003-05-21  Moritz Schulte  <moritz@g10code.com>
+
+	* mpiutil.c (_gcry_mpi_alloc_limb_space): Only try to allocate
+	memory in case the amount of bytes to allocate is non-zero.
+
 2003-04-27  Moritz Schulte  <moritz@g10code.com>
 
 	* mpiutil.c (_gcry_mpi_resize): Allocate secure memory, in case
